implementacion agregar-usuario

--- a/src/app/components/footer-menu/footer-menu.component.html
+++ b/src/app/components/footer-menu/footer-menu.component.html
@@ -13,6 +13,9 @@
       <ion-button fill="clear" (click)="goTo('/agregar-equipos')" class="footer-icon-btn">
         <ion-icon name="laptop-outline"></ion-icon>
       </ion-button>
+      <ion-button fill="clear" (click)="goTo('/agregar-usuario')" class="footer-icon-btn">
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-button>
       <ion-button fill="clear" (click)="goTo('/perfil')" class="footer-icon-btn">
         <ion-icon name="person-circle-outline"></ion-icon>
       </ion-button>
