--- a/src/app/components/footer-menu/footer-menu.component.html
+++ b/src/app/components/footer-menu/footer-menu.component.html
@@ -1,5 +1,6 @@
 <ion-footer class="custom-footer">
   <ion-toolbar>
+    <!-- Botones de navegación -->
     <div class="footer-buttons">
       <ion-button fill="clear" (click)="goTo('/inicio-footer')" class="footer-icon-btn">
         <ion-icon name="home-outline"></ion-icon>
