--- a/src/app/pages/formulario-visitas/formulario-visitas.page.html
+++ b/src/app/pages/formulario-visitas/formulario-visitas.page.html
@@ -221,6 +221,10 @@
           <ion-label class="nowrap">Mantenimiento de reloj</ion-label>
           <ion-checkbox slot="end" formControlName="mantenimientoReloj"></ion-checkbox>
         </ion-item>
+        <ion-item>
+          <ion-label class="nowrap">Ecógrafo</ion-label>
+            <ion-checkbox slot="end" formControlName="ecografo"></ion-checkbox>
+        </ion-item>
       </ion-card-content>
     </ion-card>
 
