--- a/src/app/pages/formulario-visitas/formulario-visitas.page.html
+++ b/src/app/pages/formulario-visitas/formulario-visitas.page.html
@@ -85,7 +85,7 @@
         </div>
 
         <!-- Panel de selección desplegable -->
-        <ion-card *ngIf="mostrarListaSolicitantes" class="dropdown-card modern-dropdown">
+        <ion-card *ngIf="mostrarListaSolicitantes" class="dropdown-card modern-dropdown open">
           <div class="dropdown-header">
             <ion-button fill="clear" size="small" (click)="mostrarListaSolicitantes = false" class="close-btn">
               <ion-icon name="close"></ion-icon>
